minor fix for slides display text wrapping

--- a/src/app/convert/slide-display/slide-display.component.scss
+++ b/src/app/convert/slide-display/slide-display.component.scss
@@ -3,6 +3,6 @@
 .song-slide{
   .card-body{
     font-size: $font-size-sm;
-    white-space: pre;
+    white-space: pre-wrap;
   }
 }
